src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>ActivityName__c</fullName>
        <description>SFDC1-166. 
Activity name tied to the Field Service Activity.</description>
        <label>Activity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActivityRequestOrigin__c</fullName>
        <description>SFDC1-166.
The origin of this specific Field Service Activity.</description>
        <inlineHelpText>Who requested this</inlineHelpText>
        <label>Activity Request Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Other Referral</fullName>
                </value>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Public Training</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Sales Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <description>SFDC1-166 : Activity type tied to the Field Service Activity.
SFDC1-6018 : Changed from &quot;Acitivity Type&quot; TO &quot;Activity Type&quot;</description>
        <inlineHelpText>Type of Event</inlineHelpText>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access/Usage</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Analysis and Technical Issues</fullName>
                </value>
                <value>
                    <fullName>Colleague Training</fullName>
                </value>
                <value>
                    <fullName>Custom Webpage Development</fullName>
                </value>
                <value>
                    <fullName>Customer Consulting</fullName>
                </value>
                <value>
                    <fullName>Customer Training</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>E learning Creation</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Preparation</fullName>
                </value>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Research Focus Interaction</fullName>
                </value>
                <value>
                    <fullName>Sales Demos</fullName>
                </value>
                <value>
                    <fullName>Sales/Marketing Events</fullName>
                </value>
                <value>
                    <fullName>Support Requirement Meeting</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryLanguage__c</fullName>
        <description>SFDC1-166.
Delivery Language associated with the Field Service Activity.</description>
        <label>Delivery Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryMethod__c</fullName>
        <description>SFDC1-1052. 
Delivery Method tied to the Field Service Activity.</description>
        <inlineHelpText>What is the Medium</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On site</fullName>
                </value>
                <value>
                    <fullName>Web based</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Public location</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpenseBillable__c</fullName>
        <description>SFDC1-166.
The expense amount that is billable.
SFDC1-5579
Changing the Expense billable field and API name</description>
        <label>Expense Billable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpenseNonBillable__c</fullName>
        <description>SFDC1-166.
The expense amount that is not billable.</description>
        <label>Expense Non-Billable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HoursDelivered__c</fullName>
        <description>SFDC1-675. 
Minor request made to record hours delivered for the FSA.</description>
        <inlineHelpText>How long was session</inlineHelpText>
        <label>Hours Delivered</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursofPrep__c</fullName>
        <description>SFDC1-166.
Hours of prep required for this Field Service Activity.</description>
        <inlineHelpText>Hours of Preperation</inlineHelpText>
        <label>Hours of Prep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>Concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>System ID referencing the source record Populated at Migration</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the Legacy CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>SFDC1-166.
Location that is tied to the Field Service Activity.</description>
        <inlineHelpText>Where will it happen</inlineHelpText>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NumberOfAttendees__c</fullName>
        <description>SFDC1-169.
Roll-up required to validate there is always an attendee tied to the Field Service Activity.</description>
        <label>Number of Attendees</label>
        <summaryForeignKey>FieldServiceActivityAttendee__c.FieldServiceActivity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfProducts__c</fullName>
        <description>SFDC1-169.
Roll-up required to make sure there is always a product tied to the Field Service Activity.</description>
        <label>Number of Products</label>
        <summaryForeignKey>FieldServiceActivityProduct__c.FieldServiceActivity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-166.
Associated opportunity for this Field Service Activity.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDFSA__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>FSA{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID FSA</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PrimaryInstructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-166.
Primary instructor tied to the Field Service Activity.</description>
        <label>Primary Instructor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>WorkOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>SFDC1-166.
Revenue amount generated through this Field Service Activity.</description>
        <inlineHelpText>Income from Activity</inlineHelpText>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryInstructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-166.
Secondary instructor tied to the Field Service Activity.</description>
        <label>Secondary Instructor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders (Secondary Instructor)</relationshipLabel>
        <relationshipName>WorkOrders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalSeats__c</fullName>
        <description>SFDC1-166.
Total Seats assigned to the Field Service Activity.</description>
        <label>Total Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllFieldServiceActivities</fullName>
        <columns>Name</columns>
        <columns>ActivityName__c</columns>
        <columns>ActivityType__c</columns>
        <columns>Status</columns>
        <columns>PrimaryInstructor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Field Service Activities</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>ActivityName__c</columns>
        <columns>ActivityType__c</columns>
        <columns>Status</columns>
        <columns>StartDate</columns>
        <columns>Account</columns>
        <filterScope>Mine</filterScope>
        <label>My Field Service Activities</label>
    </listViews>
    <listViews>
        <fullName>Start_Date</fullName>
        <columns>StartDate</columns>
        <columns>Status</columns>
        <columns>Revenue__c</columns>
        <columns>PrimaryInstructor__c</columns>
        <columns>Name</columns>
        <filterScope>Everything</filterScope>
        <label>FSA Showing Start Date</label>
    </listViews>
    <recordTypes>
        <fullName>WorkOrderStandard</fullName>
        <active>true</active>
        <description>SFDC1-931</description>
        <label>Work Order Standard</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>OneProductAndOneAttendeeIsRequired</fullName>
        <active>true</active>
        <description>SFDC1-1052.
A work order cannot be completed until an attendee AND a product is added.
SFDC1-1827: Changing error message</description>
        <errorConditionFormula>AND(
	ISPICKVAL(Status, &quot;Delivered&quot;),
	OR(
	NumberOfAttendees__c &lt; 1 ,
	NumberOfProducts__c &lt; 1	)
	)</errorConditionFormula>
        <errorMessage>A Field Service Activity cannot be completed without a related Attendee record and a Product record.</errorMessage>
    </validationRules>
</CustomObject>